# lidar-pc

./: .gitignore  README.md  lidar_pc.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: fix_wsl_camera.sh  scan_room_video.sh  setup_macos.sh  setup_windows.ps1  setup_wsl.sh
src/lidar_pc/: __init__.py  capture.py  cli.py  config.py  doctor.py  exporter.py  models.py  reconstruction.py  tracking.py  utils.py  wsl_camera.py
src/lidar_pc/schemas/: capture_packet.v1.schema.json
tests/integration/: test_pipeline.py
tests/unit/: test_capture_errors.py  test_exporter.py  test_keyframe.py  test_reconstruction.py  test_utils.py  test_wsl_camera.py
