[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "lidar-pc"
version = "0.1.0"
description = "Cross-platform PC scanner using webcam + SLAM-style reconstruction."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "lidar-pc contributors" }]
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.9,<5",
  "jsonschema>=4.21,<5",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
reconstruction = [
  "open3d>=0.18",
  "trimesh>=4.4",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.9",
]

[project.scripts]
lidar-pc = "lidar_pc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/lidar_pc"]

[tool.hatch.build.targets.wheel.force-include]
"src/lidar_pc/schemas/capture_packet.v1.schema.json" = "lidar_pc/schemas/capture_packet.v1.schema.json"
